# LinearSystemSolver

./: .gitignore  4x4matrixDOKNotSym.txt  CMakeLists.txt  CMakeUserPresets.json  README.md  main.cpp
cmake/: AddGoogleTest.cmake
src/: CMakeLists.txt  CSRMatrix.h  ColMajMatrix.h  GMRES.h  GradientDescent.h  GradientMethods.h  IterMethods.cpp  IterMethods.h  LinearSystemSolver.h  Matrix.h  SCRMatrix.h  ThomasAlgorithm.cpp  VectorMath.h
tests/: CMakeLists.txt  TestCSRMatrix.cpp  TestColMajMatrix.cpp  TestGMRES.cpp  TestGradientMethods.cpp  TestIterMethods.cpp  TestMatrix.cpp  TestSCRMatrix.cpp  TestSolving.cpp  TestVectorOps.cpp  test1.cpp
timeMesure/: BiCG-CGS_NotSym.cpp  CG-BiCG-CGS_Sym.cpp  CMakeLists.txt  IterMethods.cpp  MulByVector.cpp  SORvsOmega.cpp  SpeededMPI&others.cpp  UniversalBoost.cpp
timeMesure/plotters/: matrixGen.py  matrixGenNotSym.py  plotGradientMethodsNotSym.py  plotGradientMethodsSym.py  plotSORvsOmega.py  plotUniBoost.py  plotterIterMethods.py  plotterSpeededMPI.py  test.ipynb
